DF Fixed some sonar problems.